<resources>
    <string name="app_name">FoodieHut</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_foodMenu">Menu</string>
    <string name="menu_orderHistory">Order History</string>
    <string name="menu_trackOrder">Track Order</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_promo">Promotions</string>
    <string-array name="categories_array">
        <item>Pasta</item>
        <item>Pizza</item>
        <item>Salad</item>
        <item>Soup</item>
        <item>Burger</item>
        <item>Submarine</item>
        <item>Rice</item>
    </string-array>
    <string name="description">The Chess Pizza is typically topped with a rich tomato sauce, a blend of cheeses, and a variety of flavorful toppings that symbolize different chess pieces, such as mushrooms for pawns, bell peppers for knights, and sausage slices for rooks.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_description" />
    <string name="category_image_description" />
    <string name="burger_image" />
    <string name="add_item" />
    <string name="remove_item" />
    <string name="header_image_desc" />
    <string name="product_image_description" />
    <string name="order_confirmed" />
    <string name="order_id_icon" />
    <string name="nearby_shops" />

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>